AG-10044 - Fix main content clipping for smaller screens

--- a/packages/ag-charts-website/src/design-system/modules/docs.module.scss
+++ b/packages/ag-charts-website/src/design-system/modules/docs.module.scss
@@ -33,6 +33,7 @@
 
 .docPage {
     flex: 1 1 0px;
+    width: 100%;
     min-width: 0px;
     padding-top: $spacing-size-4;
     padding-bottom: $spacing-size-16;
